Change version to RC1

--- a/package.xml
+++ b/package.xml
@@ -15,7 +15,7 @@
  </lead>
  <date>2010-10-01</date>
  <version>
-  <release>1.0.0beta</release>
+  <release>1.0.0RC1</release>
   <api>1.0.0</api>
  </version>
  <stability>
