--- a/package.xml
+++ b/package.xml
@@ -13,13 +13,13 @@
   <email>jan.sorgalla@dotsunited.de</email>
   <active>yes</active>
  </lead>
- <date>2010-12-02</date>
+ <date>2010-12-06</date>
  <version>
-  <release>1.0.0RC2</release>
+  <release>1.0.0</release>
   <api>1.0.0</api>
  </version>
  <stability>
-  <release>beta</release>
+  <release>stable</release>
   <api>stable</api>
  </stability>
  <license uri="https://github.com/dotsunited/du-bundlefu/blob/master/LICENSE">BSD License</license>
