--- a/package.xml
+++ b/package.xml
@@ -13,7 +13,7 @@
   <email>jan.sorgalla@dotsunited.de</email>
   <active>yes</active>
  </lead>
- <date>2011-01-xx</date>
+ <date>2011-01-19</date>
  <version>
   <release>0.9.0</release>
   <api>0.9.0</api>
@@ -29,29 +29,29 @@
    <file name="LICENSE" role="doc" />
    <file name="README.markdown" role="doc" />
    <dir name="src">
-    <dir name="Du">
+    <dir name="DotsUnited">
      <dir name="BundleFu">
       <dir name="Filter">
-       <file install-as="Du/BundleFu/Filter/Callback.php" name="Callback.php" role="php">
+       <file install-as="DotsUnited/BundleFu/Filter/Callback.php" name="Callback.php" role="php">
         <tasks:replace from="@package_version@" to="version" type="package-info" />
        </file>
-       <file install-as="Du/BundleFu/Filter/ClosureCompilerService.php" name="ClosureCompilerService.php" role="php">
+       <file install-as="DotsUnited/BundleFu/Filter/ClosureCompilerService.php" name="ClosureCompilerService.php" role="php">
         <tasks:replace from="@package_version@" to="version" type="package-info" />
        </file>
-       <file install-as="Du/BundleFu/Filter/FilterInterface.php" name="FilterInterface.php" role="php">
+       <file install-as="DotsUnited/BundleFu/Filter/FilterChain.php" name="FilterChain.php" role="php">
         <tasks:replace from="@package_version@" to="version" type="package-info" />
        </file>
-       <file install-as="Du/BundleFu/Filter/FilterChain.php" name="FilterChain.php" role="php">
+       <file install-as="DotsUnited/BundleFu/Filter/FilterInterface.php" name="FilterInterface.php" role="php">
         <tasks:replace from="@package_version@" to="version" type="package-info" />
        </file>
       </dir>
-      <file install-as="Du/BundleFu/Bundle.php" name="Bundle.php" role="php">
+      <file install-as="DotsUnited/BundleFu/Bundle.php" name="Bundle.php" role="php">
        <tasks:replace from="@package_version@" to="version" type="package-info" />
       </file>
-      <file install-as="Du/BundleFu/CssUrlRewriter.php" name="CssUrlRewriter.php" role="php">
+      <file install-as="DotsUnited/BundleFu/CssUrlRewriter.php" name="CssUrlRewriter.php" role="php">
        <tasks:replace from="@package_version@" to="version" type="package-info" />
       </file>
-      <file install-as="Du/BundleFu/FileList.php" name="FileList.php" role="php">
+      <file install-as="DotsUnited/BundleFu/FileList.php" name="FileList.php" role="php">
        <tasks:replace from="@package_version@" to="version" type="package-info" />
       </file>
      </dir>
