--- a/.travis.yml
+++ b/.travis.yml
@@ -12,4 +12,4 @@ script: phpunit --coverage-text --configuration phpunit.travis.xml
 
 notifications:
   email: false
-  webhooks: http://www.dotsunited.de/webhooks/travisci.php
+  webhooks: http://webhooks.dotsunited.de/travisci.php
