Remove version and set branch-alias

--- a/composer.json
+++ b/composer.json
@@ -4,7 +4,6 @@
     "description": "BundleFu is a PHP 5.3+ library which bundles multiple css/javascript files into a big package and sends it out at once",
     "keywords": ["css", "javascript", "bundling", "asset"],
     "homepage": "https://github.com/dotsunited/BundleFu",
-    "version": "0.9.4",
     "license": "MIT",
     "authors": [
         {
@@ -19,6 +18,11 @@
     "autoload": {
         "psr-0": {
             "DotsUnited\\BundleFu": "src/"
+        }
+    },
+    "extra": {
+        "branch-alias": {
+            "dev-master": "1.0-dev"
         }
     }
 }
