--- a/.travis.yml
+++ b/.travis.yml
@@ -1,21 +1,28 @@
 language: php
 
-php: 
-  - 5.3.3
-  - 5.3
+sudo: false
+
+# lock distro so new future defaults will not break the build
+dist: trusty
+
+php:
   - 5.4
   - 5.5
   - 5.6
-  - hhvm
+  - 7.0
+  - 7.1
+  - 7.2
 
-before_install:
-  - composer self-update
+matrix:
+  include:
+    - php: 5.3
+      dist: precise
 
 install:
-  - composer install --dev --prefer-source
+  - composer install --no-interaction
 
 script:
-  - phpunit --coverage-text
+  - ./vendor/bin/phpunit --coverage-text
 
 notifications:
   email: false
